Fix misaligned title #516

--- a/style/utils/_reset.scss
+++ b/style/utils/_reset.scss
@@ -26,6 +26,6 @@ a {
   text-decoration: none;
 }
 
-:target {
+section:target {
   padding-top: 10rem !important;
 }
